crates/keron-lang/tests/corpus/errors/check/symlink_missing_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: missing required argument `to` for `symlink`
  --> 2:18
  |
2 | val s: Symlink = symlink(from = "a")
  |                  ^^^^^^^^^^^^^^^^^^^^
